--- a/springChap6-kakaoLogin/src/main/resources/application.properties
+++ b/springChap6-kakaoLogin/src/main/resources/application.properties
@@ -14,8 +14,17 @@ spring.thymeleaf.suffix=.html
 
 ##기존대로 한다면 spring.security.oauth2.client.registration.kakao
 
-kakao.client.id=1de427946b54b678747ce5e453b9b473
-kakao.client.secret=TPFJZhM4J00ipC2soUqDP7VDdtjeZgeq
-##callback 로그인이 됐을 때 이동할 공간
-redirect = callback
+kakao.client.id=055c0b47b89c99ddb22be1896a688442
+kakao.client.secret=SKeYUrlonwrNe8SmRcsvfmSwSAoGYmJ1
+##callback 로그인이 됐을 때 이동할 공간 redirect = callback
 kakao.redirect.url=http://localhost:8080/kakao/callback
+
+
+spring.security.user.name=root
+spring.security.user.password=root
+spring.security.user.roles=ADMIN
+
+spring.security.loginUrl=/login
+spring.security.successUrl=/
+spring.security.logoutSuccessUrl=/login
+
