--- a/springChap6-kakaoLogin/src/main/resources/application.properties
+++ b/springChap6-kakaoLogin/src/main/resources/application.properties
@@ -11,20 +11,21 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+##캐시가 쌓이면 자동으로 지워줌
+spring.thymeleaf.cache=false
 
 ##기존대로 한다면 spring.security.oauth2.client.registration.kakao
 
+##카카오 로그인 설정
 kakao.client.id=055c0b47b89c99ddb22be1896a688442
 kakao.client.secret=SKeYUrlonwrNe8SmRcsvfmSwSAoGYmJ1
 ##callback 로그인이 됐을 때 이동할 공간 redirect = callback
 kakao.redirect.url=http://localhost:8080/kakao/callback
 
 
-spring.security.user.name=root
-spring.security.user.password=root
-spring.security.user.roles=ADMIN
-
-spring.security.loginUrl=/login
-spring.security.successUrl=/
-spring.security.logoutSuccessUrl=/login
+##네이버 로그인 설정
+naver.client.id=V6wtr1X2dEy08A2IRK_1
+naver.client.secret=L2Eq3imbaY
+##callback 로그인이 됐을 때 이동할 공간 redirect = callback
+naver.redirect.url=http://localhost:8080/naver/callback
 
