--- a/final-exam/package.json
+++ b/final-exam/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-map",
+  "name": "final-exam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
