--- a/springChap8-kakao-Api-Register/src/main/resources/application.properties
+++ b/springChap8-kakao-Api-Register/src/main/resources/application.properties
@@ -1,1 +1,29 @@
+server.port=8080
 
+## DB 연결
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XE
+spring.datasource.username=khk2
+spring.datasource.password=kh1234
+
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.thymeleaf.prefix=classpath:templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.mvc.static-path-pattern=/static/**
+
+## My Batis 설정
+mybatis.mapper-locations=classpath:/mapper/*.xml
+mybatis.type-aliases-package=com.kh.model
+
+spring.devtools.livereload.enabled=true
+
+
+# 카카오 로그인 설정
+
+kakao.client.id=5f86632f1a8a7222b5f4dad3e2ace649
+kakao.client.secret=SKi5YbvfMkdB1Obo64OYbuy57pVFcHPv
+kakao.redirect.url=http://localhost:8080/kakao/callback
