--- a/springChap8-kakao-Api-Register/src/main/resources/application.properties
+++ b/springChap8-kakao-Api-Register/src/main/resources/application.properties
@@ -17,13 +17,13 @@ spring.mvc.static-path-pattern=/static/**
 
 ## My Batis 설정
 mybatis.mapper-locations=classpath:/mapper/*.xml
-mybatis.type-aliases-package=com.kh.model
+mybatis.type-aliases-package=com.kh.kakaoApi
 
 spring.devtools.livereload.enabled=true
 
 
 # 카카오 로그인 설정
 
-kakao.client.id=5f86632f1a8a7222b5f4dad3e2ace649
-kakao.client.secret=SKi5YbvfMkdB1Obo64OYbuy57pVFcHPv
+kakao.client.id=
+kakao.client.secret=
 kakao.redirect.url=http://localhost:8080/kakao/callback
